@@ -1,3 +1,10 @@
+2006-05-31  Erlend Aasland  <erlenda@gmail.com>
+
+	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)
+
+	* scm/output-ps.scm (repeat-slash): fix a bug that made repeat slash beams
+	too wide.
+
 2006-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/relocate.cc (read_relocation_dir): Do not blindly
